deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener-deployment
  namespace: shortener
spec:
  replicas: 3  # Number of replicas (Pods) to maintain
  selector:
    matchLabels:
      app: shortener-app
  template:
    metadata:
      labels:
        app: shortener-app
    spec:
      serviceAccountName: shortener-sa
      containers:
        - name: shortener
          image: sinakeshmiri/shortner
          ports:
            - containerPort: 3080  # Port on which the container listens
