deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortener-service
  namespace: shortener
spec:
  selector:
    app: shortener-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3080
